reserve_and_align() assumptions are invalid on windows

XMLWordPrintable

    • b55
    • windows
    • Not verified

        ReservedSpace::reserve_and_align() assumes that memory reserved by os::reserve_memory() can be released in separate pieces at separate times. This assumption holds on posix-like systems where reserved_memory() calls mmap(), but does not hold on windows.

        The problem is currently latent because reserve_and_align() is not called on windows, but the fix for JDK-6725414 will change that.

              Assignee:
              John Coomes (Inactive)
              Reporter:
              John Coomes (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: