8014611: reserve_and_align() assumptions are invalid on windows Summary: also reviewed by ron.durbin@oracle.com, thomas.schatzl@oracle.com Reviewed-by: dcubed, brutisso